2008-05-06  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-db-email.c
	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db-sqlite.h
	* src/trackerd/tracker-db.c
	* src/trackerd/trackerd.c: Removed DBConnection->index. It was
	always a pointer to the struct itself.

2008-05-06  Ivan Frade  <ivan.frade@nokia.com>
	
	* src/trackerd/tracker-parser.c: Renamed WordType to
	TrackerParserWordType to avoid conflicts.
	
	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db-sqlite.h
	* src/trackerd/tracker-utils.h
	* src/trackerd/trackerd.c: 
	(tracker_db_connect_all): Removed unused param.
	Replaced gpointer with Indexer in Tracker struct.

	* src/trackerd/tracker-indexer.c
	* src/trackerd/tracker-indexer.h: Removed unused code.
	
2008-05-06  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-apps.c:
	* src/trackerd/tracker-email-utils.c:
	* src/trackerd/tracker-process-files.c:
	* src/trackerd/tracker-service-manager.[ch]:
	* src/trackerd/tracker-utils.[ch]:
	* src/trackerd/trackerd.c: Moved all tracker_add_service_dir() API
	to tracker-service-manager and renamed it accordingly. This was
	moved out of tracker-utils.[ch].

	* src/libtracker-common/tracker-file-utils.[ch]: Moved the
	function which removes directory roots to here from the daemon. 

2008-05-06  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bumped the version of SQLite from 3.4 to 3.5 because
		- We require --enable-threadsafe
		- This version allows concurrent access from different
		threads sharing the same connection

2008-05-06  Philip Van Hoof  <pvanhoof@gnome.org>

	* Xesam property setters and getters

2008-05-05  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-utils.[ch]:
	* src/trackerd/tracker-db-sqlite.c: Removed tracker_timer_start()
	and tracker_timer_end() since they are only used in one place.
	Used a GTimer instead of GTimeVal and also optimised the loading
	of the prepared queries by using the GMappedFile API.
